--- a/parquet-hadoop/pom.xml
+++ b/parquet-hadoop/pom.xml
@@ -24,6 +24,7 @@
     <version>1.12.2</version>
   </parent>
 
+  <version>1.12.2-mdh-1.12.2-SNAPSHOT</version>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>parquet-hadoop</artifactId>
@@ -39,17 +40,17 @@
     <dependency>
       <groupId>org.apache.parquet</groupId>
       <artifactId>parquet-column</artifactId>
-      <version>${project.version}</version>
+      <version>${parent.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.parquet</groupId>
       <artifactId>parquet-format-structures</artifactId>
-      <version>${project.version}</version>
+      <version>${parent.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.parquet</groupId>
       <artifactId>parquet-column</artifactId>
-      <version>${project.version}</version>
+      <version>${parent.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
@@ -68,7 +69,7 @@
     <dependency>
       <groupId>org.apache.parquet</groupId>
       <artifactId>parquet-jackson</artifactId>
-      <version>${project.version}</version>
+      <version>${parent.version}</version>
     </dependency>
     <dependency>
       <groupId>${jackson.groupId}</groupId>
